# pseudo3D

./: CMakeLists.txt  README.md  dev_conf.sh
scripts/: conf_dbg.sh  conf_dev.sh
src/: main.c
